--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,7 @@ body {
 	font-family: 'Epilogue', sans-serif;
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
+	overflow: hidden;
 }
 a {
 	text-decoration: none;
