--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,7 @@ body {
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
 	height: 100%;
+	overflow: hidden;
 }
 :root {
 	--midgrey: #c4c4c4;
