--- a/src/index.css
+++ b/src/index.css
@@ -77,16 +77,16 @@ select {
 	}
 }
 
-html {
+/* html {
 	height: 100%;
-}
+} */
 
 body {
 	margin: 0;
 	font-family: 'Epilogue', sans-serif;
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
-	height: 100%;
+	/* height: 100%; */
 	color: #ddd;
 }
 :root {
@@ -95,8 +95,11 @@ body {
 	--cell-width: 150px;
 }
 #root {
-	position: relative;
+	position: fixed;
 	height: 100%;
+	width: 100%;
+	background: url('images/bg.png') no-repeat center center;
+	background-size: cover;
 }
 a {
 	text-decoration: none;
